fix: VolumeSlider is now positioned absolute to relative to VolumeControls Give same appearance for both live and vod Removed conditional rendering and instead use CSS to hide VolumeSlider Added sliderWrappper to give mouse pointer some more margin before hiding VolumeSlider

--- a/packages/eyevinn-skin/src/components/buttons/volume/volume.module.css
+++ b/packages/eyevinn-skin/src/components/buttons/volume/volume.module.css
@@ -1,18 +1,26 @@
-.container {
+.volumeButtonContainer {
 	width: 1.5em;
 	height: 1.5em;
-
 	cursor: pointer;
+    padding-top: -50px;
 }
-.container svg {
+.volumeButtonContainer svg {
 	width: 100%;
 	height: 100%;
 	fill: rgba(255, 255, 255, 0.8);
 }
-.container svg:hover {
+.volumeButtonContainer svg:hover {
 	fill: rgba(255, 255, 255, 1);
 }
-
+.sliderWrapper {
+    height: 8em;
+    width: 1.5em;
+    left: 50%;
+    margin-left: -0.75em;
+    display: none;
+    bottom: 1.5em;
+    position: absolute;
+}
 .sliderContainer {
     background-color: rgba(228, 227, 227, 0.3);
     height: 7em;
@@ -20,14 +28,21 @@
     cursor: pointer;
     border-radius: 0.1em;
     position: absolute;
-    bottom: 4em;
-    right: 2.8em;
+    bottom: 0.15em;
+    left: 50%;
+    margin-left: -0.35em;
     transform: rotate(180deg);
     border: 0.05em, solid, rgba(187, 186, 186, 0.5);
-  }
-  .sliderProgress {
+}
+.sliderProgress {
     background-color: rgba(255, 255, 255, 1);
     width: 0.7em;
     border-radius: 0.1em;
     border-bottom: 0.05em, solid, rgba(187, 186, 186, 0.7);
   }
+.controls {
+    position: relative;
+}
+.controls:hover .sliderWrapper {
+    display: block;
+}
